tests/errors/syn_call1.java
public class syn_call1 {
public static void main(String[] args){
( ) ;
}
}